# osqp-cpp

./: CMakeLists.txt
src/: my_first_qp.cpp
